--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "@stencil/core": "^1.8.4"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "hub": "^6.1.2"
+  }
 }
